--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="productos de marroquineria">
+    <meta name="description" content="bolsos, carteras, accsorios y mucho mas. aceptamos todas las formas de pago y hacemos envios a todo el pais">
     <link rel="stylesheet" href="./css/style.css">
     <title>inicio</title>
 </head>
