--- a/section/prodcutos.html
+++ b/section/prodcutos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
@@ -37,40 +38,87 @@
     </header>
     <h1>FEMME bags...</h1>
     <section class="productos">
-        <div class="p">
-            <p class="descripcion">producto</p>
-            <img src="../img/producto.jpg" alt="producto1">
+        <div class="p" style="width: 18rem;">
+            <img src="../img/producto.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p1">
-            <p class="descripcion1">poducto</p>
-            <img src="../img/producto1.jpeg" alt="prodcuto2">
+        <div class="p1" style="width: 18rem;">
+            <img src="../img/producto1.jpeg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p2">
-            <p class="descripcion2">poducto</p>
-            <img src="../img/producto2.jpg" alt="prodcuto2">
+        <div class="p2" style="width: 18rem;">
+            <img src="../img/producto2.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p3">
-            <p class="descripcion3">poducto</p>
-            <img src="../img/producto3.jpg" alt="producto3">
+        <div class="p3" style="width: 18rem;">
+            <img src="../img/producto3.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p4">
-            <p class="descripcion4">poducto</p>
-            <img src="../img/producto4.jpg" alt="producto4">
+        <div class="p4" style="width: 18rem;">
+            <img src="../img/producto4.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p5">
-            <p class="descripcion5">poducto</p>
-            <img src="../img/producto5.jpg" alt="producto5">
+        <div class="p5" style="width: 18rem;">
+            <img src="../img/producto5.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p6">
-            <p class="descripcion6">poducto</p>
-            <img src="../img/producto6.jpg" alt="producto6">
+        <div class="p6" style="width: 18rem;">
+            <img src="../img/producto6.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
-        <div class="p7">
-            <p class="descripcion7">poducto</p>
-            <img src="../img/producto7.jpg" alt="producto7">
+        <div class="p7" style="width: 18rem;">
+            <img src="../img/producto7.jpg" class="card-img-top" alt="producto">
+            <div class="card-body">
+                <p class="cdescripcion">producto</p>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                <button class="btn btn-primary me-md-2" type="button">consultar stock</button>
+                <button class="btn btn-primary" type="button">comprar</button>
+            </div>
+            </div>
         </div>
     </section>
-    </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
