--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <meta name="keywords" content="productos de marroquineria">
     <meta name="description" content="bolsos, carteras, accsorios y mucho mas. aceptamos todas las formas de pago y hacemos envios a todo el pais">
     <link rel="stylesheet" href="./css/style.css">
-    <title>inicio</title>
+    <title>Index</title>
 </head>
 <body>
     <main>
-        <img class="icono" src="./img/iconfacebook.svg" alt="icono facebook">
-        <img class="icono1" src="./img/iconinstagram.svg" alt="icono de fotos">
-        <img class="icono2" src="./img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        <h1>FEMME bags...</h1>
     </main>
     <header>
         <nav>
@@ -22,7 +20,7 @@
                     <a href="index.html">inicio</a>
                 </li>
                 <li>
-                    <a href="./section/prodcutos.html">contacto</a>
+                    <a href="./section/contacto.html">contacto</a>
                 </li>
                 <li>
                     <a href="./section/nosotros.html">historia</a>
@@ -31,12 +29,11 @@
                     <a href="./section/historia.html">nosotros</a>
                 </li>
                 <li>
-                    <a href="./section/contacto.html">productos</a>
+                    <a href="./section/productos.html">productos</a>
                 </li>
             </ul>
         </nav>
     </header>
-        <h1>FEMME bags...</h1>
         <div class="logoimg">
         <img class="logo" src="./img/logoempresa.jpg" alt="logo de la empresa">
         </div>
@@ -46,5 +43,10 @@
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
         encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <footer>
+            <img class="icono" src="./img/iconfacebook.svg" alt="icono facebook">
+            <img class="icono1" src="./img/iconinstagram.svg" alt="icono de fotos">
+            <img class="icono2" src="./img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        </footer>
     </body>
 </html>
