--- a/section/contacto.html
+++ b/section/contacto.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>contacto</title>
+    <title>Contacto</title>
 </head>
 <body>
-    <div class="responsive"></div>
     <main>
-        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
-        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
-        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        <h1>FEMME bags...</h1>
     </main>
     <header>
         <nav>
@@ -31,17 +28,19 @@
                     <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                    <a href="prodcutos.html">productos</a>
+                    <a href="productos.html">productos</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section>
-        <h1>FEMME bags...</h1>
-    </section>
     <div class="contenido1">
         <img class="logo1" src="../img/logoempresa.jpg" alt="logo de la empresa">
         </div>
         <p>podes contactarnos via facebook, instagram o whatsapp. Estamos para brindarte una respuesta inmediata y resolver todas tus dudas. No dudes en comunicarte para que podamos juntos crecer y llegar a una solucion de cualquier duda o consulta</p>
-</body>
+        <footer>
+            <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
+            <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
+            <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        </footer>
+    </body>
 </html>
