--- a/section/historia.html
+++ b/section/historia.html
@@ -5,13 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Historia</title>
 </head>
 <body>
     <main>
-        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
-        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
-        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        <h1>FEMME bags...</h1>
     </main>
     <header>
         <nav>
@@ -29,13 +27,12 @@
                     <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                    <a href="prodcutos.html">productos</a>
+                    <a href="productos.html">productos</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section>
-        <h1>FEMME bags...</h1>
         <p>nuestra historia comienza hace ya alguno años en el cual 
         surgió este gusto de la marroquineria. 
         Fuimos a por todo con este sueño y logramos obtener
@@ -46,5 +43,10 @@
         <div><img src="../img/cociendo.jpg" alt="foto cociendo una prenda"></div>
         <div><img src="../img/cociendo2.jpg" alt="foto cociendo otra prenda"></div>
     </section>
-    </body>
+    <footer>
+        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
+        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
+        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+    </footer>
+</body>
 </html>
