--- a/section/nosotros.html
+++ b/section/nosotros.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Nosotros</title>
 </head>
 <body>
-    <div class="responsive"></div>
     <main>
-        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
-        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
-        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        <h1>FEMME bags...</h1>
     </main>
     <header>
         <nav>
@@ -30,17 +27,21 @@
                     <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                    <a href="prodcutos.html">productos</a>
+                    <a href="productos.html">productos</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <section>
-        <h1>FEMME bags...</h1>
         <p>somos madre e hija, ambas nos apasionamos por este rubro y queremos dia a dia superarnos y mejorar tanto la calidad como los diseños de nuestros modelos</p>
         <div><img src="../img/madreehija.jpg" alt="foto de madre e hija"></div>
         <div><img src="../img/madreehija2.jpg" alt="foto de madre e hija 2"></div>
     </section>
+    <footer>
+        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
+        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
+        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+    </footer>
 </body>
 </html>
