--- a/section/productos.html
+++ b/section/productos.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Productos</title>
 </head>
 <body>
     <main>
-        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
-        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
-        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+        <h1>FEMME bags...</h1>
     </main>
-    
     <header>
         <nav>
             <ul>
@@ -31,12 +28,11 @@
                     <a href="nosotros.html">nosotros</a>
                 </li>
                 <li>
-                    <a href="prodcutos.html">productos</a>
+                    <a href="productos.html">productos</a>
                 </li>
             </ul>
         </nav>
     </header>
-    <h1>FEMME bags...</h1>
     <section class="productos">
         <div class="p" style="width: 18rem;">
             <img src="../img/producto.jpg" class="card-img-top" alt="producto">
@@ -119,6 +115,11 @@
             </div>
         </div>
     </section>
+    <footer>
+        <img class="icono" src="../img/iconfacebook.svg" alt="icono facebook">
+        <img class="icono1" src="../img/iconinstagram.svg" alt="icono de fotos">
+        <img class="icono2" src="../img/iconwhatsapp.svg" alt="icono de mensajes verde">
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
